--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -27,26 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1980295104.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    conse_int = [for i in numbers = range(1,51) return print(i.append(numbers)) ]\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n"
      ]
     }
    ],
    "source": [
     "#your code here\n",
     "\n",
+    "conse_int = [ numbers for numbers in range(1,51)]\n",
     "\n",
-    "\n",
-    "conse_int = [for i in numbers = range(1,51) return print(i.append(numbers)) ]\n",
-    "\n",
-    "conse_int"
+    "print(conse_int)"
    ]
   },
   {
@@ -58,11 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 120, 122, 124, 126, 128, 130, 132, 134, 136, 138, 140, 142, 144, 146, 148, 150, 152, 154, 156, 158, 160, 162, 164, 166, 168, 170, 172, 174, 176, 178, 180, 182, 184, 186, 188, 190, 192, 194, 196, 198, 200]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "\n",
+    "even_int = [numbers for numbers in range(1,201) if numbers % 2 == 0]\n",
+    "\n",
+    "print(even_int)"
    ]
   },
   {
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,11 +101,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "\n",
+    "list = [element for row in a for element in row]\n",
+    "\n",
+    "print(list)\n",
+    "\n",
+    "#the result of list comprehension is the same as just entering 'print(a)' something is not right"
    ]
   },
   {
@@ -108,11 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.7876326, 0.77109654, 0.81835917, 0.87645456, 0.7066597, 0.57433389, 0.92796258, 0.69814654, 0.97016248, 0.71725408, 0.87702738, 0.76615487, 0.57871812, 0.53222417, 0.9976855, 0.80930099, 0.50962849, 0.94555126]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here - Doing......\n",
+    "\n",
+    "array = [element for row in a for element in row if element >= 0.5]\n",
+    "\n",
+    "print(array)"
    ]
   },
   {
@@ -124,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +185,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "\n",
+    "list = [element for row in b for element in row]\n",
+    "\n",
+    "print(list)"
    ]
   },
   {
@@ -162,11 +201,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.06769833, 0.96031863, 0.51293743], [0.58256464, 0.59005654, 0.56266457]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "\n",
+    "array = [element for row in b for element in row if element[-1] >= 0.5]\n",
+    "\n",
+    "print(array)"
    ]
   },
   {
