--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -217,7 +217,7 @@
     "\n",
     "array = [element for row in b for element in row if element[-1] >= 0.5]\n",
     "\n",
-    "print(array)"
+    "print(array)\n"
    ]
   },
   {
